docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/alertdialog.mdx
---
title: AlertDialog
description: A Jetpack Compose AlertDialog component for displaying native alert dialogs.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI AlertDialog matches the official Jetpack Compose [AlertDialog](https://developer.android.com/develop/ui/compose/components/dialog) API. Content is provided via slot sub-components (`AlertDialog.Title`, `AlertDialog.Text`, `AlertDialog.ConfirmButton`, `AlertDialog.DismissButton`, `AlertDialog.Icon`) that map directly to Compose's slot parameters.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/alertdialog/android-light.webp"
  darkSrc="/static/images/expo-ui/alertdialog/android-dark.webp"
  alt="Material 3 alert dialog with title, supporting text, and Cancel/Discard buttons"
/>

## Installation

<APIInstallSection />

## Usage

### Basic alert dialog

<ComponentExample
  title="BasicAlertDialogExample.tsx"
  src="/static/images/expo-ui/examples/alertdialog-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/alertdialog-basic-android-dark.webp"
  alt="A Material 3 alert dialog titled Confirm action with supporting text and Cancel and Confirm buttons">

```tsx
import { useState } from 'react';
import {
  Host,
  AlertDialog,
  Button,
  TextButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function BasicAlertDialogExample() {
  const [visible, setVisible] = useState(false);

  return (
    <Host matchContents>
      <Button onClick={() => setVisible(true)}>
        <Text>Show alert</Text>
      </Button>
      {visible && (
        <AlertDialog onDismissRequest={() => setVisible(false)}>
          <AlertDialog.Title>
            <Text>Confirm action</Text>
          </AlertDialog.Title>
          <AlertDialog.Text>
            <Text>Are you sure you want to proceed?</Text>
          </AlertDialog.Text>
          <AlertDialog.ConfirmButton>
            <TextButton onClick={() => setVisible(false)}>
              <Text>Confirm</Text>
            </TextButton>
          </AlertDialog.ConfirmButton>
          <AlertDialog.DismissButton>
            <TextButton onClick={() => setVisible(false)}>
              <Text>Cancel</Text>
            </TextButton>
          </AlertDialog.DismissButton>
        </AlertDialog>
      )}
    </Host>
  );
}
```

</ComponentExample>

### Custom colors

<ComponentExample
  title="CustomColorsExample.tsx"
  src="/static/images/expo-ui/examples/alertdialog-custom-colors-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/alertdialog-custom-colors-android-dark.webp"
  alt="An alert dialog with a dark navy container and light text, overriding the theme colors">

```tsx
import { useState } from 'react';
import {
  Host,
  AlertDialog,
  Button,
  TextButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function CustomColorsExample() {
  const [visible, setVisible] = useState(false);

  return (
    <Host matchContents>
      <Button onClick={() => setVisible(true)}>
        <Text>Show alert</Text>
      </Button>
      {visible && (
        <AlertDialog
          onDismissRequest={() => setVisible(false)}
          colors={{
            containerColor: '#1E1E2E',
            titleContentColor: '#CDD6F4',
            textContentColor: '#BAC2DE',
          }}>
          <AlertDialog.Title>
            <Text>Custom Dialog</Text>
          </AlertDialog.Title>
          <AlertDialog.Text>
            <Text>This dialog uses custom colors.</Text>
          </AlertDialog.Text>
          <AlertDialog.ConfirmButton>
            <TextButton onClick={() => setVisible(false)}>
              <Text>OK</Text>
            </TextButton>
          </AlertDialog.ConfirmButton>
          <AlertDialog.DismissButton>
            <TextButton onClick={() => setVisible(false)}>
              <Text>Cancel</Text>
            </TextButton>
          </AlertDialog.DismissButton>
        </AlertDialog>
      )}
    </Host>
  );
}
```

</ComponentExample>

### With icon

<ComponentExample
  title="IconDialogExample.tsx"
  src="/static/images/expo-ui/examples/alertdialog-icon-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/alertdialog-icon-android-dark.webp"
  alt="An alert dialog with an info icon centred above the title Dialog with Icon">

```tsx
import { useState } from 'react';
import {
  Host,
  AlertDialog,
  Button,
  TextButton,
  Text,
  Icon,
} from '@expo/ui/jetpack-compose';

export default function IconDialogExample() {
  const [visible, setVisible] = useState(false);

  return (
    <Host matchContents>
      <Button onClick={() => setVisible(true)}>
        <Text>Show alert</Text>
      </Button>
      {visible && (
        <AlertDialog onDismissRequest={() => setVisible(false)}>
          <AlertDialog.Icon>
            {/* Replace with your own icon asset */}
            <Icon source={require('./info-icon.xml')} />
          </AlertDialog.Icon>
          <AlertDialog.Title>
            <Text>Dialog with Icon</Text>
          </AlertDialog.Title>
          <AlertDialog.Text>
            <Text>This dialog has an icon above the title.</Text>
          </AlertDialog.Text>
          <AlertDialog.ConfirmButton>
            <TextButton onClick={() => setVisible(false)}>
              <Text>OK</Text>
            </TextButton>
          </AlertDialog.ConfirmButton>
        </AlertDialog>
      )}
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { AlertDialog } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/alertdialog"
  apiName="AlertDialog"
/>
